Added Patterson's jersey number

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <li>
           <img src="images/nogueira.png" />
           <div class="name">Lucas Nogueira</div>
-          <div class=number"># 92</div>)
           <div class="position">Center</div>
         </li>
         <li>
           <img src="images/patterson.png" />
           <div class="name">Patrick Patterson</div>
+          <div class = "number"># 52</div>
           <div class="position">Forward</div>
         </li>
         <li>
